# english-ipa

./: README.md  pyproject.toml  requirements.txt  test.py
.github/workflows/: python-publish-prd.yml  python-publish.yml
english_ipa/: cambridge.py  cambridge_async.py  utils.py
english_ipa/model/: IPA.py  region.py  word.py
